--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="com.indmexaviation.riws" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="com.indmexaviation.riws" version="0.0.2" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>RIWS</name>
     <DESCRIPTION>RIWS Plugin</DESCRIPTION>
     <js-module name="RIWS" src="www/RIWS.js">
@@ -12,5 +12,8 @@
             </feature>
         </config-file>
         <source-file src="src/ios/RIWS.m" />
+        <source-file src="src/ios/GpsDataFormatters.m" />
+        <source-file src="src/ios/SimpleBadElfGpsManager.m" />
+        <framework src="src/ios/BEAPSDK.framework" custom="true" />
     </platform>
 </plugin>
