--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="com.indmexaviation.riws" version="0.0.2" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="com.indmexaviation.riws" version="0.0.3" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>RIWS</name>
     <DESCRIPTION>RIWS Plugin</DESCRIPTION>
     <js-module name="RIWS" src="www/RIWS.js">
@@ -17,10 +17,12 @@
         <header-file src="src/ios/SimpleBadElfGpsManagers.h" />
         <source-file src="src/ios/SimpleBadElfGpsManagers.m" />
         <framework src="src/ios/BEAPSDK.framework" custom="true" />
+        <framework src="src/ios/RIWSFramework.framework" custom="true" />
         <framework src="QuartzCore.framework" />
         <framework src="ExternalAccessory.framework" />
         <framework src="SystemConfiguration.framework" />
         <framework src="CFNetwork.framework"/>
         <framework src="CoreLocation.framework" />
+        <framework src="AVFoundation.framework" />
     </platform>
 </plugin>
