--- a/plugin.xml
+++ b/plugin.xml
@@ -2,16 +2,16 @@
 <plugin id="com.indmexaviation.riws" version="0.0.3" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>RIWS</name>
     <DESCRIPTION>RIWS Plugin</DESCRIPTION>
-    <js-module name="RIWS" src="www/RIWS.js">
-        <clobbers target="RIWS" />
+    <js-module name="riws" src="www/riws.js">
+        <clobbers target="riws" />
     </js-module>
     <platform name="ios">
         <config-file parent="/*" target="config.xml">
-            <feature name="RIWS">
-                <param name="ios-package" value="RIWS" />
+            <feature name="riws">
+                <param name="ios-package" value="riws" />
             </feature>
         </config-file>
-        <source-file src="src/ios/RIWS.m" />
+        <source-file src="src/ios/riws.m" />
         <header-file src="src/ios/GpsDataFormatters.h" />
         <source-file src="src/ios/GpsDataFormatters.m" />
         <header-file src="src/ios/SimpleBadElfGpsManagers.h" />
