--- a/plugin.xml
+++ b/plugin.xml
@@ -24,8 +24,8 @@
         <source-file src="src/ios/GpsDataFormatters.m" />
         <header-file src="src/ios/SimpleBadElfGpsManagers.h" />
         <source-file src="src/ios/SimpleBadElfGpsManagers.m" />
-        <source-file src="src/ios/BEAPSDK.framework" />
-        <framework src="src/ios/BEAPSDK.framework" custom="false" parent"/*/src/ios/BEAPSDK.framework" />
+
+        <framework src="src/ios/BEAPSDK.framework" custom="false" parent"/*/plugins/com.indmexaviation.riws/src/ios/BEAPSDK.framework" />
         <framework src="src/ios/RIWSFramework.framework" custom="true" />
         <framework src="QuartzCore.framework" />
         <framework src="ExternalAccessory.framework" />
