--- a/plugin.xml
+++ b/plugin.xml
@@ -25,7 +25,7 @@
         <header-file src="src/ios/SimpleBadElfGpsManagers.h" />
         <source-file src="src/ios/SimpleBadElfGpsManagers.m" />
 
-        <framework src="src/ios/BEAPSDK.framework" custom="false" parent"/*/plugins/com.indmexaviation.riws/src/ios/BEAPSDK.framework" />
+        <framework src="src/ios/BEAPSDK.framework" custom="false" parent"./*/plugins/com.indmexaviation.riws/src/ios/BEAPSDK.framework" />
         <framework src="src/ios/RIWSFramework.framework" custom="true" />
         <framework src="QuartzCore.framework" />
         <framework src="ExternalAccessory.framework" />
