--- a/plugin.xml
+++ b/plugin.xml
@@ -27,7 +27,7 @@
         <header-file src="src/ios/NSData+hexa.h" />
         <source-file src="src/ios/NSData+hexa.m" />
         <header-file src="src/ios/nmeaApi.h" />
-        <framework src="src/ios/libnmea-universal.a" custom="true" />
+        <source-file src="src/ios/libnmea-universal.a" framework="true" />
 
         <framework src="src/ios/RIWSFramework.framework" custom="true" />
         <framework src="QuartzCore.framework" />
