--- a/plugin.xml
+++ b/plugin.xml
@@ -22,13 +22,12 @@
         <source-file src="src/ios/riws.m" />
         <header-file src="src/ios/BadElfListener.h" />
         <source-file src="src/ios/BadElfListener.m" />
-        <header-file src="src/ios/EADSessionController.h" />
-        <source-file src="src/ios/EADSessionController.m" />
+        <header-file src="src/ios/GPSSession.h" />
+        <source-file src="src/ios/GPSSession.m" />
         <header-file src="src/ios/NSData+hexa.h" />
         <source-file src="src/ios/NSData+hexa.m" />
         <header-file src="src/ios/nmeaApi.h" />
         <source-file src="src/ios/libnmea-universal.a" framework="true" />
-
         <framework src="src/ios/RIWSFramework.framework" custom="true" />
         <framework src="QuartzCore.framework" />
         <framework src="ExternalAccessory.framework" />
