Revert "bug fixes"
This reverts commit 45865ff5a6bed288e2cf2ec06f8281871b16a614.

--- a/plugin.xml
+++ b/plugin.xml
@@ -20,6 +20,10 @@
         <string>App will use the location services </string>
     </config-file>
         <source-file src="src/ios/riws.m" />
+        <header-file src="src/ios/GpsDataFormatters.h" />
+        <source-file src="src/ios/GpsDataFormatters.m" />
+        <header-file src="src/ios/SimpleBadElfGpsManagers.h" />
+        <source-file src="src/ios/SimpleBadElfGpsManagers.m" />
         <header-file src="src/ios/BadElfListener.h" />
         <source-file src="src/ios/BadElfListener.m" />
         <header-file src="src/ios/EADSessionController.h" />
@@ -27,7 +31,7 @@
         <header-file src="src/ios/NSData+hexa.h" />
         <source-file src="src/ios/NSData+hexa.m" />
         <header-file src="src/ios/nmeaApi.h" />
-        <framework src="src/ios/libnmea-universal.a" custom="true" />
+        <source-file src="src/ios/libnmea-universal.a" />
 
         <framework src="src/ios/RIWSFramework.framework" custom="true" />
         <framework src="QuartzCore.framework" />
