--- a/plugin.xml
+++ b/plugin.xml
@@ -35,5 +35,6 @@
         <framework src="CFNetwork.framework"/>
         <framework src="CoreLocation.framework" />
         <framework src="AVFoundation.framework" />
+        <hook type="after_platform_add" src="src/js/embeddedFramework.js" />
     </platform>
 </plugin>
