--- a/plugin.xml
+++ b/plugin.xml
@@ -28,14 +28,13 @@
         <source-file src="src/ios/NSData+hexa.m" />
         <header-file src="src/ios/nmeaApi.h" />
         <source-file src="src/ios/libnmea-universal.a" framework="true" />
-        <resource-file src="src/ios/RIWSFramework.framework" target="./"/>
-        <framework src="src/ios/RIWSFramework.framework" custom="true"  />
+        <resource-file src="src/ios/RIWSFramework.framework" custom="true" target="../"/>
+        <framework src="src/ios/RIWSFramework.framework"  />
         <framework src="QuartzCore.framework" />
         <framework src="ExternalAccessory.framework" />
         <framework src="SystemConfiguration.framework" />
         <framework src="CFNetwork.framework"/>
         <framework src="CoreLocation.framework" />
         <framework src="AVFoundation.framework" />
-        <hook type="after_platform_add" src="src/js/embeddedFramework.js" />
     </platform>
 </plugin>
