--- a/plugin.xml
+++ b/plugin.xml
@@ -9,7 +9,7 @@
       <engine name="cordova" version=">=3.1.0" /><!-- Needs cordova/urlutil -->
     </engines>
     <platform name="ios">
-        <config-file parent="/*" target="config.xml">
+        <config-file parent="/widget" target="config.xml">
             <feature name="riws">
                 <param name="ios-package" value="riws" />
             </feature>
