--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="com.indmexaviation.riws" version="1.0.11" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="com.indmexaviation.riws" version="1.0.12" xmlns="http://apache.org/cordova/ns/plugins/1.0" >
     <name>RIWS</name>
     <DESCRIPTION>RIWS Plugin</DESCRIPTION>
     <engines>
@@ -9,8 +9,9 @@
     <js-module name="riws" src="www/riws.js">
         <clobbers target="riws" />
     </js-module>
+    <asset src="www/riws.js" target="riws.js" />
     <platform name="ios">
-        <config-file parent="/widget" target="config.xml">
+        <config-file parent="/widget" target="res/xml/config.xml">
             <feature name="riws">
                 <param name="ios-package" value="riws" />
             </feature>
