--- a/plugin.xml
+++ b/plugin.xml
@@ -40,6 +40,6 @@
         <framework src="CFNetwork.framework"/>
         <framework src="CoreLocation.framework" />
         <framework src="AVFoundation.framework" />
-        <hook type="after_plugin_install" src="hooks/embedframework/addEmbedded.js" />
+        <!--<hook type="after_plugin_install" src="hooks/embedframework/addEmbedded.js" />---!>
     </platform>
 </plugin>
