Updated the Plugin

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
       "version": ">=2.8.0"
     }
   ],
-  "author": "KNETWORKS",
+  "author": "INDMEXAviation",
   "bugs": {
     "url": "https://github.com/KNETWORKS-IN/VeocciPlugin/issues"
   },
