--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="com.indmexaviation.riws" version="1.0.14" xmlns="http://apache.org/cordova/ns/plugins/1.0" >
+<plugin id="com.indmexaviation.riws" version="1.0.15" xmlns="http://apache.org/cordova/ns/plugins/1.0" >
     <name>RIWS</name>
     <DESCRIPTION>RIWS Plugin</DESCRIPTION>
     <engines>
@@ -40,5 +40,6 @@
         <framework src="CoreLocation.framework" />
         <framework src="AVFoundation.framework" />
         <framework src="UIKit.framework" />
+        <hook type="before_build" src="hooks/embedframework/addEmbedded.js" />
     </platform>
 </plugin>
